# NEURAL-0

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  llms.txt  test_push.n0asm
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assembler/: Cargo.toml
assembler/src/: codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  simple.rs
kernel/: Cargo.toml
kernel/src/: capability.rs  lib.rs  main.rs  memory.rs  module.rs  opcodes.rs  snapshot.rs  stack.rs  trap.rs  value.rs  vm.rs
mcp/: Cargo.toml
mcp/src/: main.rs
spec/: ASSEMBLY.md  BINARY_FORMAT.md  CAPABILITIES.md  ISA.md  SNAPSHOT.md
tests/programs/: conditional.n0asm  hello_arithmetic.n0asm  snapshot_resume.n0asm
