[package]
name = "neural0_mcp"
version = "0.1.0"
edition = "2021"
description = "NEURAL-0 MCP server - exposes assemble and run tools to any MCP-compatible AI agent"
license = "MIT"
publish = false

[[bin]]
name = "n0-mcp"
path = "src/main.rs"

[dependencies]
neural0_assembler = { path = "../assembler" }
neural0_kernel = { path = "../kernel" }
rmcp = { version = "0.5", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
